--- a/beautiful.html
+++ b/beautiful.html
@@ -43,14 +43,17 @@
     <div class="blog">
         <h1>Cittagong</h1>
         <p>it is an wonderful city, it has a lot of natural resources</p>
+        <a href="https://en.wikipedia.org/wiki/Chittagong">Learn more</a>
     </div>
     <div class="blog">
         <h1>Dhaka</h1>
         <p>it is a megical city, here you never know what waits for tomorrow</p>
+        <a href="https://en.wikipedia.org/wiki/Dhaka">Learn more</a>
     </div>
     <div class="blog">
         <h1>Mymensingh</h1>
         <p>it is a small but beautiful city, where I was born</p>
+        <a href="https://en.wikipedia.org/wiki/Mymensingh"></a>
     </div>
 
 
