--- a/beautiful.html
+++ b/beautiful.html
@@ -53,7 +53,7 @@
     <div class="blog">
         <h1>Mymensingh</h1>
         <p>it is a small but beautiful city, where I was born</p>
-        <a href="https://en.wikipedia.org/wiki/Mymensingh"></a>
+        <a href="https://en.wikipedia.org/wiki/Mymensingh">Learn more</a>
     </div>
 
 
